--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+newAgr=Creazione convenzione
+
 newAgrTitle=Titolo
 newAgrContact=Referente
 newAgrProtocolNumber=Numero protocollo
@@ -14,3 +16,15 @@ newAgrBegin=Data di inizio
 newAgrEnd=Data di scadenza
 newAgrNote=Note
 newAgrInventory=Repertorio
+
+newAgrCapitalBalance=Fondo di bilancio di Ateneo
+newAgrCommonBalance=Fondo comune di Ateneo
+newAgrStructures=Strutture
+newAgrPersonnel=Personale
+newAgrGoods=Beni e servizi
+newAgrTrip=Missioni
+newAgrConsMaterials=Materiale di consumo
+newAgrInvMaterials=Materiale inventariabile
+newAgrRentals=Noleggi
+newAgrContrPersonnel=Personale a contratto
+newAgrOtherCosts=Altri costi
