converters + popup aggiunta responsabili

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+add=Aggiungi
+
 newAgr=Creazione convenzione
 
 newAgrTitle=Titolo
@@ -28,3 +30,5 @@ newAgrInvMaterials=Materiale inventariabile
 newAgrRentals=Noleggi
 newAgrContrPersonnel=Personale a contratto
 newAgrOtherCosts=Altri costi
+
+newAgrAddChiefPopupTitle=Aggiunta nuovo responsabile
