--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -32,3 +32,13 @@ newAgrContrPersonnel=Personale a contratto
 newAgrOtherCosts=Altri costi
 
 newAgrAddChiefPopupTitle=Aggiunta nuovo responsabile
+
+newInstDate=Data
+newInstAmount=Importo
+newInstIva=IVA
+newInstVoucherNumber=Numero Reversale
+newInstVoucherDate=Data Reversale
+newInstIvaVoucherNumber=Numero di Reversale Iva
+newInstPendingNumber=Numero di Sospeso
+newInstInvoiceNumber=Numero Fattura
+newInstInvoiceDate=Data Fattura
