--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 add=Aggiungi
+yes=S\u00EC
+no=No
 
 newAgr=Creazione convenzione
 
@@ -32,6 +34,7 @@ newAgrContrPersonnel=Personale a contratto
 newAgrOtherCosts=Altri costi
 
 newAgrAddChiefPopupTitle=Aggiunta nuovo responsabile
+newInst=Creazione di una nuova rata
 
 newInstDate=Data
 newInstAmount=Importo
@@ -42,3 +45,6 @@ newInstIvaVoucherNumber=Numero di Reversale Iva
 newInstPendingNumber=Numero di Sospeso
 newInstInvoiceNumber=Numero Fattura
 newInstInvoiceDate=Data Fattura
+newInstPaidInvoice=E' stata pagata la fattura?
+newInstReportRequired=Deve essere allegata una Relazione Scientifica?
+newInstNote=Note
