--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -57,3 +57,7 @@ newInstInvoiceDate=Data Fattura
 newInstPaidInvoice=E' stata pagata la fattura?
 newInstReportRequired=Deve essere allegata una Relazione Scientifica?
 newInstNote=Note
+
+err_shareTableValues=Le quote non sono corrette
+err_shareTableGoods=Le quote dei Beni e Servizi non sono corrette
+err_shareTablePersonnel=Le quote del personale non sono corrette
