refactor messaggi + list non funzionante

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -7,42 +7,42 @@ next=Avanti
 previous=Indietro
 yes=S\u00EC
 no=No
+search=Cerca
 
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
 
 newAgr=Creazione convenzione
 
-newAgrTitle=Titolo
-newAgrContact=Referente
-newAgrProtocolNumber=Numero protocollo
-newAgrCompany=Ditta
-newAgrProjectNumber=Nome progetto_cia
-newAgrChief=Responsabile scientifico
-newAgrType=Tipo
-newAgrDepartment=UADR
-newAgrWholeAmount=Importo totale
-newAgrIva=Importo IVA
-newAgrTaxableAmount=Totale imponibile
-newAgrApproval=Data di approvazione
-newAgrBegin=Data di inizio
-newAgrEnd=Data di scadenza
-newAgrNote=Note
-newAgrInventory=Repertorio
+agrTitle=Titolo
+contactPerson=Referente
+company=Ditta
+chief=Responsabile scientifico
+protocolNumber=Numero protocollo
+notes=Note
+iva=IVA
+projectNumber=Nome progetto_cia
+agrType=Tipo
+department=UADR
+wholeAmount=Importo totale
+taxableAmount=Totale imponibile
+approvalDate=Data di approvazione
+beginDate=Data di inizio
+deadlineDate=Data di scadenza
+agrInventory=Repertorio
 
-newAgrCapitalBalance=Fondo di bilancio di Ateneo
-newAgrCommonBalance=Fondo comune di Ateneo
-newAgrStructures=Strutture
-newAgrPersonnel=Personale
-newAgrGoods=Beni e servizi
-newAgrTrip=Missioni
-newAgrConsMaterials=Materiale di consumo
-newAgrInvMaterials=Materiale inventariabile
-newAgrRentals=Noleggi
-newAgrContrPersonnel=Personale a contratto
-newAgrOtherCosts=Altri costi
+shareTableCapitalBalance=Fondo di bilancio di Ateneo
+shareTableCommonBalance=Fondo comune di Ateneo
+shareTableStructures=Strutture
+shareTablePersonnel=Personale
+shareTableGoods=Beni e servizi
+shareTableTrip=Missioni
+shareTableConsMaterials=Materiale di consumo
+shareTableInvMaterials=Materiale inventariabile
+shareTableRentals=Noleggi
+shareTableContrPersonnel=Personale a contratto
+shareTableOtherCosts=Altri costi
 
-newAgrAddChiefPopupTitle=Aggiunta nuovo responsabile
 newInst=Creazione di una nuova rata
 
 newInstDate=Data
@@ -57,6 +57,8 @@ newInstInvoiceDate=Data Fattura
 newInstPaidInvoice=E' stata pagata la fattura?
 newInstReportRequired=Deve essere allegata una Relazione Scientifica?
 newInstNote=Note
+
+noAgrFound=Nessuna convenzione trovata
 
 err_shareTableValues=Le quote non sono corrette
 err_shareTableGoods=Le quote dei Beni e Servizi non sono corrette
