--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -48,18 +48,18 @@ newInst=Creazione di una nuova rata
 newInstDate=Data
 newInstAmount=Importo
 newInstIva=IVA
-newInstVoucherNumber=Numero Reversale
-newInstVoucherDate=Data Reversale
-newInstIvaVoucherNumber=Numero di Reversale Iva
-newInstPendingNumber=Numero di Sospeso
-newInstInvoiceNumber=Numero Fattura
-newInstInvoiceDate=Data Fattura
+newInstVoucherNumber=Numero reversale
+newInstVoucherDate=Data reversale
+newInstIvaVoucherNumber=Numero di reversale IVA
+newInstPendingNumber=Numero di sospeso
+newInstInvoiceNumber=Numero fattura
+newInstInvoiceDate=Data fattura
 newInstPaidInvoice=E' stata pagata la fattura?
-newInstReportRequired=Deve essere allegata una Relazione Scientifica?
+newInstReportRequired=Deve essere allegata una relazione scientifica?
 newInstNote=Note
 
 noAgrFound=Nessuna convenzione trovata
 
 err_shareTableValues=Le quote non sono corrette
-err_shareTableGoods=Le quote dei Beni e Servizi non sono corrette
+err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
 err_shareTablePersonnel=Le quote del personale non sono corrette
