stub list lazy model

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ previous=Indietro
 yes=S\u00EC
 no=No
 search=Cerca
+filter=Filtra
 
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
