quote personale provvisorio (non ancora funzionante)

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -31,6 +31,7 @@ approvalDate=Data di approvazione
 beginDate=Data di inizio
 deadlineDate=Data di scadenza
 agrInventory=Repertorio
+share=Quota
 
 shareTableCapitalBalance=Fondo di bilancio di Ateneo
 shareTableCommonBalance=Fondo comune di Ateneo
