quote personale migliorato (ma ancora non funzionante)

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ yes=S\u00EC
 no=No
 search=Cerca
 filter=Filtra
+remove=Rimuovi
 
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
