--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,15 +1,20 @@
 add=Aggiungi
-name=Nome
-surname=Cognome
+search=Cerca
+filter=Filtra
+remove=Rimuovi
+view=Visualizza
+edit=Modifica
 save=Salva
 cancel=Annulla
 next=Avanti
 previous=Indietro
+reset=Reset
+
 yes=S\u00EC
 no=No
-search=Cerca
-filter=Filtra
-remove=Rimuovi
+
+name=Nome
+surname=Cognome
 
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
