quote personale: validazione un pelo più sveglia

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -71,3 +71,4 @@ noAgrFound=Nessuna convenzione trovata
 err_shareTableValues=Le quote non sono corrette
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
 err_shareTablePersonnel=Le quote del personale non sono corrette
+err_doubleChiefInShares=E' stato selezionato più volte lo stesso Responsabile Scientifico
