--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -55,7 +55,8 @@ shareTableOtherCosts=Altri costi
 newInst=Creazione di una nuova rata
 
 newInstDate=Data
-newInstAmount=Importo
+amount=Importo
+date=Data
 newInstIva=IVA
 newInstVoucherNumber=Numero reversale
 newInstVoucherDate=Data reversale
@@ -63,8 +64,9 @@ newInstIvaVoucherNumber=Numero di reversale IVA
 newInstPendingNumber=Numero di sospeso
 newInstInvoiceNumber=Numero fattura
 newInstInvoiceDate=Data fattura
-newInstPaidInvoice=E' stata pagata la fattura?
-newInstReportRequired=Deve essere allegata una relazione scientifica?
+paidInvoice=Fattura Pagata
+paidInvoice_Question=E' stata pagata la fattura?
+reportRequired_Question=Deve essere allegata una relazione scientifica?
 newInstNote=Note
 
 noAgrFound=Nessuna convenzione trovata
