--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -75,3 +75,4 @@ err_shareTableValues=Le quote non sono corrette
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
 err_shareTablePersonnel=Le quote del personale non sono corrette
 err_doubleChiefInShares=E' stato selezionato più volte lo stesso Responsabile Scientifico
+err_installmentAmount=L'importo inserito è troppo alto
