--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -76,3 +76,4 @@ err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
 err_shareTablePersonnel=Le quote del personale non sono corrette
 err_doubleChiefInShares=E' stato selezionato più volte lo stesso Responsabile Scientifico
 err_installmentAmount=L'importo inserito è troppo alto
+err_installmentShareTable=Le quote della rata non sono coerenti con le quote della Convenzione
