abbellimento quote personale

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -70,6 +70,7 @@ reportRequired_Question=Deve essere allegata una relazione scientifica?
 newInstNote=Note
 
 noAgrFound=Nessuna convenzione trovata
+noShareFound=Nessuna quota inserita
 
 err_shareTableValues=Le quote non sono corrette
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
