abbellimento lista rate

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -71,6 +71,7 @@ newInstNote=Note
 
 noAgrFound=Nessuna convenzione trovata
 noShareFound=Nessuna quota inserita
+noInstallmentFound=Nessuna rata inserita
 
 err_shareTableValues=Le quote non sono corrette
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
