--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -73,7 +73,7 @@ noAgrFound=Nessuna convenzione trovata
 noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
 
-err_shareTableValues=Le quote non sono corrette
+err_shareTableValues=La somma delle quote deve essere 100
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
 err_shareTablePersonnel=Le quote del personale non sono corrette
 err_doubleChiefInShares=E' stato selezionato più volte lo stesso Responsabile Scientifico
