--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -79,3 +79,10 @@ err_shareTablePersonnel=Le quote del personale non sono corrette
 err_doubleChiefInShares=E' stato selezionato più volte lo stesso Responsabile Scientifico
 err_installmentAmount=L'importo inserito è troppo alto
 err_installmentShareTable=Le quote della rata non sono coerenti con le quote della Convenzione
+data_Tab=Dati
+shareTable_Tab=Ripartizione
+installmentsList_Tab=Rate
+attachments_Tab=Allegati
+end__tab=Fine
+data_header=Dati Generali
+shareTable_Header=Tabella di ripartizione
