--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -82,12 +82,12 @@ noAgrFound=Nessuna convenzione trovata
 noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
 
-err_shareTableValues=La somma delle quote deve essere 100
-err_shareTableInvalidInput=L'importo inserito è troppo alto
-err_shareTableInvalidInput_detail=L'importo inserito è troppo alto (la somma con gli altri importi supera 100)
+err_shareTableValues=Le quote non sono corrette
+err_shareTableValues_detail=Le quote non sono corrette (la somma supera 100)
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
+err_shareTableGoods_detail=Le quote di "Beni e servizi" non sono corrette (la somma supera 100)
 err_shareTablePersonnel=Le quote del personale non sono corrette
-err_doubleChiefInShares=E' stato selezionato più volte lo stesso Responsabile Scientifico
+err_shareTablePersonnel_detail=Le quote del personale non sono corrette (la somma è diversa da 100)
 err_installmentAmount=L'importo inserito è troppo alto
 err_installmentShareTable=Le quote della rata non sono coerenti con le quote della Convenzione
 
