--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -42,6 +42,8 @@ projectNumber=Nome progetto_cia
 agrType=Tipo
 department=UADR
 wholeAmount=Importo totale
+reservedAmount=Totale impegnato
+spentAmount=Totale Speso
 taxableAmount=Totale imponibile
 approvalDate=Data di approvazione
 beginDate=Data di inizio
