--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -19,9 +19,12 @@ data_Tab=Dati
 shareTable_Tab=Ripartizione
 installmentsList_Tab=Rate
 attachments_Tab=Allegati
+recap_Tab=Riepilogo
 end__tab=Fine
 data_header=Dati Generali
 shareTable_Header=Tabella di ripartizione
+annualRecap_Header=Riepilogo per anno
+totalRecap_Header=Riepilogo Totale
 
 name=Nome
 surname=Cognome
@@ -38,10 +41,14 @@ chief=Responsabile scientifico
 protocolNumber=Numero protocollo
 notes=Note
 iva=IVA
+turnOver=Fatturato
+totalTurnOver=Totale fatturato
+debtNoteAmount=Note
 projectNumber=Nome progetto_cia
 agrType=Tipo
-department=UADR
+department=UAR
 wholeAmount=Importo totale
+totalAgreementAmount=Totale imponibile della convenzione
 reservedAmount=Totale impegnato
 spentAmount=Totale Speso
 taxableAmount=Totale imponibile
@@ -67,7 +74,10 @@ newInst=Creazione di una nuova rata
 
 newInstDate=Data
 amount=Importo
+ramainder=Residuo
+totalRemainder=Totale residuo
 date=Data
+year=Anno
 newInstIva=IVA
 newInstVoucherNumber=Numero reversale
 newInstVoucherDate=Data reversale
