--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -75,7 +75,8 @@ newInst=Creazione di una nuova rata
 newInstDate=Data
 amount=Importo
 ramainder=Residuo
-totalRemainder=Totale residuo
+totalExpiringRemainder=Totale residuo in scadenza
+totalNonExpiringRemainder=Totale Residuo non in scadenza
 date=Data
 year=Anno
 newInstIva=IVA
