piccole migliorie attachments table

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -13,6 +13,8 @@ previous=Indietro
 reset=Reset
 select=Seleziona
 sure=Sei sicuro?
+load=Carica
+choose=Scegli
 
 yes=S\u00EC
 no=No
@@ -96,6 +98,7 @@ newInstNote=Note
 noAgrFound=Nessuna convenzione trovata
 noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
+noAttachmentFound=Nessun allegato inserito
 
 err_shareTableValues=Le quote non sono corrette
 err_shareTableValues_detail=Le quote non sono corrette (la somma supera 100)
