piccole migliorie attachments v2

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -109,3 +109,5 @@ err_shareTablePersonnel_detail=Le quote del personale non sono corrette (la somm
 err_installmentAmount=L'importo inserito è troppo alto
 err_installmentShareTable=Le quote della rata non sono coerenti con le quote della Convenzione
 
+invalidFileSize=Dimensione del file non valida
+invalidFile=File non valido
