validator amount rata + modifica messaggi share table rata

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -107,7 +107,9 @@ err_shareTableGoods_detail=Le quote di "Beni e servizi" non sono corrette (la so
 err_shareTablePersonnel=Le quote del personale non sono corrette
 err_shareTablePersonnel_detail=Le quote del personale non sono corrette (la somma è diversa da 100)
 err_installmentAmount=L'importo inserito è troppo alto
-err_installmentShareTable=Le quote della rata non sono coerenti con le quote della Convenzione
+err_installmentAmount_detail=L'importo inserito è troppo alto (la somma con quello delle altre rate supera l'importo della convenzione)
+err_installmentShareTable=Il valore di "{0}" è troppo alto
+err_installmentShareTable_detail=Il valore di "{0}" è troppo alto (la somma con in valore delle altre rate supera il valore inserito nella convenzione)
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
