--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -110,6 +110,8 @@ err_installmentAmount=L'importo inserito è troppo alto
 err_installmentAmount_detail=L'importo inserito è troppo alto (la somma con quello delle altre rate supera l'importo della convenzione)
 err_installmentShareTable=Il valore di "{0}" è troppo alto
 err_installmentShareTable_detail=Il valore di "{0}" è troppo alto (la somma con in valore delle altre rate supera il valore inserito nella convenzione)
+err_agreementSpent=Totale speso deve essere minore di totale impegnato
+err_agreementReserved=Non \u00E8 possibile impegnare pi\u00F9 di quanto si \u00E8 "riscosso"
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
