--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -32,11 +32,16 @@ totalRecap_Header=Riepilogo Totale
 
 name=Nome
 surname=Cognome
+date=Data
+year=Anno
 
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
 
 newAgr=Creazione convenzione
+newFund=Creazione contributo
+
+fundTitle=Titolo
 
 agrTitle=Titolo
 contactPerson=Referente
@@ -48,13 +53,13 @@ iva=IVA
 turnOver=Fatturato
 totalTurnOver=Totale fatturato
 debtNoteAmount=Note
-projectNumber=Nome progetto_cia
+projectNumber=Nome progetto CIA
 agrType=Tipo
 department=UAR
 wholeAmount=Importo totale
 totalAgreementAmount=Totale imponibile della convenzione
 reservedAmount=Totale impegnato
-spentAmount=Totale Speso
+spentAmount=Totale speso
 taxableAmount=Totale imponibile
 approvalDate=Data di approvazione
 beginDate=Data di inizio
@@ -81,8 +86,6 @@ amount=Importo
 ramainder=Residuo
 totalExpiringRemainder=Totale residuo in scadenza
 totalNonExpiringRemainder=Totale Residuo non in scadenza
-date=Data
-year=Anno
 newInstIva=IVA
 newInstVoucherNumber=Numero reversale
 newInstVoucherDate=Data reversale
