verso la sicurezza 2

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -118,3 +118,6 @@ err_agreementReserved=Non \u00E8 possibile impegnare pi\u00F9 di quanto si \u00E
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
+
+serialNumber=Matricola
+password=Password
