--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -121,3 +121,5 @@ invalidFile=File non valido
 
 serialNumber=Matricola
 password=Password
+
+notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
