--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -103,18 +103,25 @@ noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
 noAttachmentFound=Nessun allegato inserito
 
+
 err_shareTableValues=Le quote non sono corrette
 err_shareTableValues_detail=Le quote non sono corrette (la somma supera 100)
 err_shareTableGoods=Le quote di "Beni e servizi" non sono corrette
 err_shareTableGoods_detail=Le quote di "Beni e servizi" non sono corrette (la somma supera 100)
 err_shareTablePersonnel=Le quote del personale non sono corrette
 err_shareTablePersonnel_detail=Le quote del personale non sono corrette (la somma è diversa da 100)
+
 err_installmentAmount=L'importo inserito è troppo alto
 err_installmentAmount_detail=L'importo inserito è troppo alto (la somma con quello delle altre rate supera l'importo della convenzione)
 err_installmentShareTable=Il valore di "{0}" è troppo alto
 err_installmentShareTable_detail=Il valore di "{0}" è troppo alto (la somma con in valore delle altre rate supera il valore inserito nella convenzione)
+
 err_agreementSpent=Totale speso deve essere minore di totale impegnato
 err_agreementReserved=Non \u00E8 possibile impegnare pi\u00F9 di quanto si \u00E8 "riscosso"
+
+err_negativeAmount=Inserire un importo non negativo
+err_invalidAmount=Inserire un importo valido
+err_invalidValue=Inserire un valore valido
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
