conversione a Money completata (si spera)

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -116,8 +116,8 @@ err_installmentAmount_detail=L'importo inserito è troppo alto (la somma con quel
 err_installmentShareTable=Il valore di "{0}" è troppo alto
 err_installmentShareTable_detail=Il valore di "{0}" è troppo alto (la somma con in valore delle altre rate supera il valore inserito nella convenzione)
 
-err_agreementSpent=Totale speso deve essere minore di totale impegnato
-err_agreementReserved=Non \u00E8 possibile impegnare pi\u00F9 di quanto si \u00E8 "riscosso"
+err_agreementSpent=Il totale speso deve essere minore del totale impegnato
+err_agreementReserved=Non \u00E8 possibile impegnare pi\u00F9 di quanto si \u00E8 fatturato
 
 err_negativeAmount=Inserire un importo non negativo
 err_invalidAmount=Inserire un importo valido
