fix vari + implementazione metodi mail (Giulio è scarso)

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ choose=Scegli
 yes=S\u00EC
 no=No
 
+
 data_Tab=Dati
 shareTable_Tab=Ripartizione
 installmentsList_Tab=Rate
@@ -34,6 +35,12 @@ name=Nome
 surname=Cognome
 date=Data
 year=Anno
+
+allM=Tutti
+allF=Tutte
+openMP=Aperti
+closedMP=Chiusi
+nextDeadline=Prossima scadenza
 
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
@@ -83,7 +90,7 @@ newInst=Creazione di una nuova rata
 
 newInstDate=Data
 amount=Importo
-ramainder=Residuo
+remainder=Residuo
 totalExpiringRemainder=Totale residuo in scadenza
 totalNonExpiringRemainder=Totale Residuo non in scadenza
 newInstIva=IVA
