--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 agrCongr=Congratulazioni! Hai completato l'inserimento della convenzione.
+attachments_list_title=Allegati inseriti\: 
+add_attachments=Aggiungi
 
 add=Aggiungi
 search=Cerca
