--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 agrCongr=Congratulazioni! Hai completato l'inserimento della convenzione.
+home=Home
 attachments_list_title=Allegati inseriti\: 
 add_attachments=Aggiungi
 
@@ -25,6 +26,7 @@ no=No
 data_Tab=Dati
 shareTable_Tab=Ripartizione
 installmentsList_Tab=Rate
+add_installment=Aggiungi una rata
 attachments_Tab=Allegati
 recap_Tab=Riepilogo
 end__tab=Fine
