--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -28,6 +28,7 @@ shareTable_Tab=Ripartizione
 installmentsList_Tab=Rate
 add_installment=Aggiungi una rata
 attachments_Tab=Allegati
+attachments_header=Allegati inseriti
 recap_Tab=Riepilogo
 end__tab=Fine
 data_header=Dati Generali
