--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 agrCongr=Congratulazioni! Hai completato l'inserimento della convenzione.
+instCongr=Congratulazioni\! Hai completato l'inserimento della rata
 home=Home
 attachments_list_title=Allegati inseriti\: 
 add_attachments=Aggiungi
