--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -143,3 +143,4 @@ serialNumber=Matricola
 password=Password
 
 notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
+login_welcome=Benvenuto in Jama
