--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 agrCongr=Congratulazioni! Hai completato l'inserimento della convenzione.
+available_actions=Azioni Disponibili
+logout=Logout
 instCongr=Congratulazioni\! Hai completato l'inserimento della rata
 home=Home
 attachments_list_title=Allegati inseriti\: 
@@ -144,3 +146,8 @@ password=Password
 
 notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
 login_welcome=Benvenuto in Jama
+user=Utente
+create_agreement=Crea una convenzione
+create_funding=Crea un contributo
+view_contracts=Visualizza i contratti
+view_deadlines=Visualizza lo scadenzario
