--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -138,6 +138,9 @@ err_negativeAmount=Inserire un importo non negativo
 err_invalidAmount=Inserire un importo valido
 err_invalidValue=Inserire un valore valido
 
+err_invalidDeadline=Data di scadenza non valida
+err_invalidDeadline_detail=Data di scadenza non valida (è precedente alla data di inizio)
+
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
 
