filtro tipo contratto nella lista dell'operatore

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -53,8 +53,8 @@ nextDeadline=Prossima scadenza
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
 
-newAgr=Creazione convenzione
-newFund=Creazione contributo
+agreement=Convenzione
+funding=Contributo
 
 fundTitle=Titolo
 
