filtro per tipo di contratto + fix

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -53,6 +53,7 @@ nextDeadline=Prossima scadenza
 newChiefTitle=Aggiungi responsabile
 newCompanyTitle=Aggiungi ditta
 
+contract=Contratto
 agreement=Convenzione
 funding=Contributo
 
@@ -113,7 +114,7 @@ paidInvoice_Question=E' stata pagata la fattura?
 reportRequired_Question=Deve essere allegata una relazione scientifica?
 newInstNote=Note
 
-noAgrFound=Nessuna convenzione trovata
+noAgrFound=Nessun contratto trovato
 noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
 noAttachmentFound=Nessun allegato inserito
