--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -155,3 +155,5 @@ create_agreement=Crea una convenzione
 create_funding=Crea un contributo
 view_contracts=Visualizza i contratti
 view_deadlines=Visualizza lo scadenzario
+create_user=Aggiungi un utente
+view_users=Visualizza l'elenco degli utenti
