tasto salva disabilitato

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -59,6 +59,9 @@ contract=Contratto
 agreement=Convenzione
 funding=Contributo
 
+contrType=Tipo
+openClosed=Aperto/Chiuso
+
 fundTitle=Titolo
 
 agrTitle=Titolo
