--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -155,6 +155,7 @@ password=Password
 
 notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
 login_welcome=Benvenuto in Jama
+login=Login
 user=Utente
 create_agreement=Crea una convenzione
 create_funding=Crea un contributo
