--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 agrCongr=Congratulazioni! Hai completato l'inserimento della convenzione.
+close=Chiudi
 available_actions=Azioni Disponibili
 logout=Logout
 instCongr=Congratulazioni\! Hai completato l'inserimento della rata
