--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -3,8 +3,10 @@
 \usepackage[italian]{babel}
 
 % Title Page
-\title{JAMA}
-\author{io}
+\title{Analisi e sviluppo di una web application \\
+basata sui framework JPA, JSF, CDI, \\
+per l'amministrazione di attività di trasferimento tecnologico}
+\author{Tommaso Levato, Alessio Sarullo, Giulio Galvan}
 
 
 \begin{document}
@@ -17,6 +19,7 @@
 \tableofcontents
 
 \chapter{Introduzione}
+\input{Ch1}
 \chapter{Modello di Dominio}
 \chapter{Tecnologie}
 \section{JPA}
