closed in scadenzario

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -164,3 +164,6 @@ view_contracts=Visualizza i contratti
 view_deadlines=Visualizza lo scadenzario
 create_user=Aggiungi un utente
 view_users=Visualizza l'elenco degli utenti
+
+
+userWiz_header="Creazione di un utente"
