--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -148,11 +148,15 @@ err_invalidValue=Inserire un valore valido
 err_invalidDeadline=Data di scadenza non valida
 err_invalidDeadline_detail=Data di scadenza non valida (è precedente alla data di inizio)
 
+err_passwordMismatch=Le password inserite non corrispondono
+err_invalidPassword=La password inserita non è valida
+
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
 
 serialNumber=Matricola
 password=Password
+confirmPassword=Password di verifica
 
 notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operazione
 login_welcome=Benvenuto in Jama
@@ -166,4 +170,4 @@ create_user=Aggiungi un utente
 view_users=Visualizza l'elenco degli utenti
 
 
-userWiz_header="Creazione di un utente"
+userWiz_header=Creazione di un utente
