--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -19,8 +19,9 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \tableofcontents
 
 \chapter{Introduzione}
-\input{Ch1}
-\chapter{Modello di Dominio}
+\chapter{Analisi}
+\section{Casi d'Uso}
+\input{casi_uso}
 \chapter{Tecnologie}
 \section{JPA}
 \section{CDI}
