--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -150,6 +150,7 @@ err_invalidDeadline_detail=Data di scadenza non valida (è precedente alla data d
 
 err_passwordMismatch=Le password inserite non corrispondono
 err_invalidPassword=La password inserita non è valida
+err_invalidEmail=Indirizzo email non valido
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
@@ -162,6 +163,8 @@ notAuthorized=Non si hanno i permessi sufficienti per portare a termine l'operaz
 login_welcome=Benvenuto in Jama
 login=Login
 user=Utente
+role=Ruolo
+email=Email
 create_agreement=Crea una convenzione
 create_funding=Crea un contributo
 view_contracts=Visualizza i contratti
