pulizia log eccezioni

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -151,6 +151,8 @@ err_invalidDeadline_detail=Data di scadenza non valida (è precedente alla data d
 err_passwordMismatch=Le password inserite non corrispondono
 err_invalidPassword=La password inserita non è valida
 err_invalidEmail=Indirizzo email non valido
+err_generic=E' avvenuto un errore
+err_sendingMail=E' avvenuto un errore durante l'invio dell' email di notifica
 
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
