tabella utenti + fix vari

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -124,6 +124,7 @@ noAgrFound=Nessun contratto trovato
 noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
 noAttachmentFound=Nessun allegato inserito
+noUserFound=Nessun utente trovato
 
 
 err_shareTableValues=Le quote non sono corrette
@@ -173,6 +174,5 @@ view_contracts=Visualizza i contratti
 view_deadlines=Visualizza lo scadenzario
 create_user=Aggiungi un utente
 view_users=Visualizza l'elenco degli utenti
-
 
 userWiz_header=Creazione di un utente
