security method annotations

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-agrCongr=Congratulazioni! Hai completato l'inserimento della convenzione.
+agrCongr=Congratulazioni! Inserimento {0} completato!
 close=Chiudi
 available_actions=Azioni Disponibili
 logout=Logout
