crocetta di merda

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -136,18 +136,20 @@ err_shareTablePersonnel_detail=Le quote del personale non sono corrette (la somm
 
 err_installmentAmount=L'importo inserito è troppo alto
 err_installmentAmount_detail=L'importo inserito è troppo alto (la somma con quello delle altre rate supera l'importo della convenzione)
-err_installmentShareTable=Il valore di "{0}" è troppo alto
-err_installmentShareTable_detail=Il valore di "{0}" è troppo alto (la somma con in valore delle altre rate supera il valore inserito nella convenzione)
+err_installmentShareTable={0}: Il valore è troppo alto
+err_installmentShareTable_detail={0}: Il valore è troppo alto (la somma con quello delle altre rate supera il valore inserito nella convenzione)
+
+err_negativeValue={0}: inserire un valore non negativo
+err_invalidValue={0}: inserire un valore valido
 
 err_agreementSpent=Il totale speso deve essere minore del totale impegnato
 err_agreementReserved=Non \u00E8 possibile impegnare pi\u00F9 di quanto si \u00E8 fatturato
 
-err_negativeAmount=Inserire un importo non negativo
-err_invalidAmount=Inserire un importo valido
-err_invalidValue=Inserire un valore valido
+err_invalidDeadline=La data di scadenza non è valida
+err_invalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio)
 
-err_invalidDeadline=Data di scadenza non valida
-err_invalidDeadline_detail=Data di scadenza non valida (è precedente alla data di inizio)
+err_instInvalidDeadline=La data di scadenza non è valida
+err_instInvalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio o successiva a quella di scadenza della convenzione)
 
 err_passwordMismatch=Le password inserite non corrispondono
 err_invalidPassword=La password inserita non è valida
